force-app/main/default/objects/DelimitedLand__c/DelimitedLand__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena os talhões, talhão é um terreno delimitado.</description>
    
    <label>Talhão</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talhões</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>