force-app/main/default/objects/DelimitedLand__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Cliente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Name</field>
            <operation>contains</operation>
            <value>Propriedade</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Talhões</relationshipLabel>
    <relationshipName>Talhoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>