force-app/main/default/objects/DelimitedLand__c/fields/AreaCultivated__c.field-meta.xml
<CustomField>
    <fullName>AreaCultivated__c</fullName>
    <label>Área de Plantio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>