force-app/main/default/objects/DelimitedLand__c/fields/AreaCultivatedCulture__c.field-meta.xml
<CustomField>
    <fullName>AreaCultivatedCulture__c</fullName>
    <label>Áreas Cultivadas (Cultura)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>