force-app/main/default/objects/DelimitedLand__c/fields/AreaCultivatedLand__c.field-meta.xml
<CustomField>
    <fullName>AreaCultivatedLand__c</fullName>
    <formula>AreaCultivated__c + AreaPasture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este Campo é a soma de Área de Plantio mais Área de Pastagem.</inlineHelpText>
    <label>Total de Áreas Cultivadas</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>