force-app/main/default/objects/DelimitedLand__c/fields/AreaPasture__c.field-meta.xml
<CustomField>
    <fullName>AreaPasture__c</fullName>
    <label>Área de pastagem</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>