force-app/main/default/objects/DelimitedLand__c/fields/AreaPreservation__c.field-meta.xml
<CustomField>
    <fullName>AreaPreservation__c</fullName>
    <label>Área de preservação ambiental</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>