force-app/main/default/objects/DelimitedLand__c/fields/AreaTotalHec__c.field-meta.xml
<CustomField>
    <fullName>AreaTotalHec__c</fullName>
    <formula>ArealTotalMeters__c / 10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Hec Proprietario Rural</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>