force-app/main/default/objects/DelimitedLand__c/fields/ContractDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDate__c</fullName>
    <label>Data de vencimento do contrato</label>
    <type>Date</type>
</CustomField>