force-app/main/default/objects/DelimitedLand__c/fields/MessageOutbound__c.field-meta.xml
<CustomField>
    <fullName>MessageOutbound__c</fullName>
    <label>Mensagem de Retorno da integração</label>
    <type>TextArea</type>
</CustomField>