force-app/main/default/objects/DelimitedLand__c/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <label>Nome do Proprietario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>