force-app/main/default/objects/DelimitedLand__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrendatario?</label>
    <type>Checkbox</type>
</CustomField>