force-app/main/default/objects/DelimitedLand__c/fields/TenantArea__c.field-meta.xml
<CustomField>
    <fullName>TenantArea__c</fullName>
    <label>Quantidade Hec Arrendatario</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>