force-app/main/default/objects/DelimitedLand__c/fields/TenantCulture__c.field-meta.xml
<CustomField>
    <fullName>TenantCulture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cultura de Arrendamento</label>
    <referenceTo>Culture__c</referenceTo>
    <relationshipLabel>Talhões</relationshipLabel>
    <relationshipName>Talhoes</relationshipName>
    <type>Lookup</type>
</CustomField>