force-app/main/default/objects/DelimitedLand__c/fields/TenantTax__c.field-meta.xml
<CustomField>
    <fullName>TenantTax__c</fullName>
    <label>Valor Taxa de Arrendamento</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>