force-app/main/default/objects/DelimitedLand__c/fields/TenantValue__c.field-meta.xml
<CustomField>
    <fullName>TenantValue__c</fullName>
    <label>Valor Arrendamento</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>