force-app/main/default/objects/DelimitedLand__c/fields/TotalArea__c.field-meta.xml
<CustomField>
    <fullName>TotalArea__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Area Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>