force-app/main/default/objects/DelimitedLand__c/fields/UnitMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitMeasurement__c</fullName>
    <description>Lista de seleção com todas as unidades de medidas</description>
    <label>Unidade de Medida</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hectare</fullName>
            </value>
            <value>
                <fullName>Are</fullName>
            </value>
            <value>
                <fullName>Centiare</fullName>
            </value>
            <value>
                <fullName>Alqueire Mineiro</fullName>
            </value>
            <value>
                <fullName>Alqueire Goiano</fullName>
            </value>
            <value>
                <fullName>Alqueire Paulista</fullName>
            </value>
            <value>
                <fullName>Alqueire do norte</fullName>
            </value>
            <value>
                <fullName>Alqueire do RJ</fullName>
            </value>
            <value>
                <fullName>Alqueire Baiano</fullName>
            </value>
            <value>
                <fullName>Litro</fullName>
            </value>
            <value>
                <fullName>Metro Quadrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>