force-app/main/default/objects/DelimitedLand__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AreaNotAllocated__c</columns>
    <columns>AreaTotal__c</columns>
    <columns>AreaCultivated__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>